--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Ndd2U04L0DarLvvcraRDFNytBZdLGFyA",
-      "authorship_tag": "ABX9TyPaYcjm85aJItfQmgM/DGop",
+      "authorship_tag": "ABX9TyMhiCxgOv2WEGgPaGI2FLJt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -493,7 +493,7 @@
         "\n",
         "\n",
         "for i in range(len(train_data.Age)):\n",
-        "    # EmbarkedのnanをXにする\n",
+        "    # EmbarkedのnanをSにする(この処理は改善予定)\n",
         "    if not(type(train_data['Embarked'][i]) is str):\n",
         "        train_data.loc[i,'Embarked'] = 'S'\n",
         "    if np.isnan(train_data['Age'][i]):\n",
