Colaboratory を使用して作成しました

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -13,7 +13,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,22 +32,37 @@
       "metadata": {
         "id": "1DYVm6J9uyoy",
         "colab_type": "code",
-        "outputId": "e4531c48-d45b-4413-8aa1-c8d8a9cf0344",
+        "outputId": "1d021e95-6575-4c5e-a9e6-8ab615622ce7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 326
         }
       },
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-            "\n"
+            "Tue Jun  2 18:00:46 2020       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 440.82       Driver Version: 418.67       CUDA Version: 10.1     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla P4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   41C    P8     7W /  75W |      0MiB /  7611MiB |      0%      Default |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                       GPU Memory |\n",
+            "|  GPU       PID   Type   Process name                             Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
         }
@@ -57,21 +73,20 @@
       "metadata": {
         "id": "k0gCvuZyvvt5",
         "colab_type": "code",
-        "outputId": "2fda3416-8d19-418e-d922-1ef1351af919",
+        "outputId": "fea1300c-e0d3-4219-de5d-01edd07ab04e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 35
         }
       },
       "source": [
         "cd drive/'My Drive'/J1seminar/titanic"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[Errno 2] No such file or directory: 'drive/My Drive/J1seminar/titanic'\n",
             "/content/drive/My Drive/J1seminar/titanic\n"
           ],
           "name": "stdout"
@@ -114,7 +129,7 @@
       "metadata": {
         "id": "eQVficyWXEJX",
         "colab_type": "code",
-        "outputId": "8ed428ec-49f6-4065-a3f6-6d9ed38dfb05",
+        "outputId": "6dc20b27-22d1-47a1-f252-5e664616774e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -126,7 +141,7 @@
         "pclass_labels = ['Death','Survived']\n",
         "plt.hist(pclass_fare,histtype = 'barstacked',label = pclass_labels)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +158,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 183
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -165,7 +180,7 @@
       "metadata": {
         "id": "frTXOEV507hb",
         "colab_type": "code",
-        "outputId": "cb819820-bdc3-405a-d17e-38cf08cfba14",
+        "outputId": "a572a1fa-e0a9-473c-feb7-2d0a3b8f29c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
@@ -185,7 +200,7 @@
         "plt.hist(plot_pclass,histtype = 'barstacked',label = pclass_labels)\n",
         "plt.legend()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,13 +215,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f1122c58978>"
+              "<matplotlib.legend.Legend at 0x7f986b37fb70>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 184
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -228,7 +243,7 @@
       "metadata": {
         "id": "B97XUPfSxu2l",
         "colab_type": "code",
-        "outputId": "d9ac0414-ab13-43a5-ea73-8049b1a8415c",
+        "outputId": "b0bf3d43-dd48-4ecc-9679-79a4afbaa3f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
@@ -250,7 +265,7 @@
         "plt.hist(plot_age,histtype = 'barstacked',bins=int(100/range_age),label = age_labels)\n",
         "plt.legend()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,13 +297,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f112638dfd0>"
+              "<matplotlib.legend.Legend at 0x7f986ae82860>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -310,7 +325,7 @@
       "metadata": {
         "id": "w4f6nOu2JEe5",
         "colab_type": "code",
-        "outputId": "fca53d1d-8e09-483d-b857-4c05695b4323",
+        "outputId": "20764d40-67a5-49ec-f054-e577bd9ed7cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 465
@@ -329,7 +344,7 @@
         "plt.hist(plot_age,histtype = 'barstacked',label = age_labels)\n",
         "plt.legend()"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,13 +366,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f11228c1080>"
+              "<matplotlib.legend.Legend at 0x7f986ae82c50>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 186
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -379,7 +394,7 @@
       "metadata": {
         "id": "971l5OxIyEIm",
         "colab_type": "code",
-        "outputId": "b351328a-c430-4290-b5cf-57e89671febd",
+        "outputId": "24488619-c718-4d99-e1b8-d4d566f57850",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -394,7 +409,7 @@
         "rate_men = sum(men)/len(men)\n",
         "print(\"% of men who survived:\",rate_men)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +529,7 @@
       "metadata": {
         "id": "oMkgE-4Zy2u-",
         "colab_type": "code",
-        "outputId": "5927a6f8-6b85-45c7-8b90-d0a739d4879c",
+        "outputId": "8b45f2d3-49fd-4559-d6d9-d35c2a0f2bee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -537,7 +552,7 @@
         "output.to_csv('my_submission.csv', index=False)\n",
         "print(\"Your submission was successfully saved!\")"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
